--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 before_install:
-- apt-get install -y latexmk texlive-latex-extra inkscape
+- sudo apt-get update
+- sudo apt-get install -y latexmk texlive-latex-extra inkscape
 script:
 - cd figures && bash ./convert.sh && cd -
 - latexmk -pdf -bibtex
